finish proc admin

--- a/Src/Areas/Admin/Views/Partial/Product/ProcList.cshtml
+++ b/Src/Areas/Admin/Views/Partial/Product/ProcList.cshtml
@@ -20,6 +20,7 @@
         </td>
         <td class="text-center pr-40"><span class="label label-rounded label-info">{{CatName}}</span></td>
         <td class="text-center pr-40"><span class="text-grey-800">{{BrandName}}</span></td>
+        <td class="text-center pr-40"><span class="text-grey-800">{{VisitCount}}</span></td>
         <td class="text-center pr-40 text-grey-300">{{Type}}</td>
         <td class="text-center control">
             <a onclick="pageLoad('/Admin/Product/AddEdit/{{ID}}','ویرایش محصول {{Title}}','procList')" class="text-blue-800"><i class="icon-pencil"></i> ویرایش</a>
@@ -55,6 +56,7 @@
                     <th class="text-center sorting pr-40" data-sort="OffPrice" data-sort-type="">قیمت</th>
                     <th class="text-center sorting pr-40" data-sort="CatID" data-sort-type="">دسته</th>
                     <th class="text-center sorting pr-40" data-sort="BrandID" data-sort-type="">برند</th>
+                    <th class="text-center sorting pr-40" data-sort="VisitCount" data-sort-type="">تعداد بازدید</th>
                     <th class="text-center sorting pr-40" data-sort="Type" data-sort-type="">وضعیت</th>
                     <th class="text-center control sorting_disabled">عملیات</th>
                 </tr>
