--- a/Src/Areas/Admin/Views/Partial/Product/ProcDetails.cshtml
+++ b/Src/Areas/Admin/Views/Partial/Product/ProcDetails.cshtml
@@ -29,6 +29,12 @@
                         }
                     </div>
                 </div>
+                <div class="form-group col-lg-12">
+                    <label class="control-label title col-lg-2 col-xs-12 mt-sm-5">تعداد بازدید</label>
+                    <div class="col-lg-7 col-xs-12">
+                        <span class="badge badge-info text-black text-xlarge">@Model.VisitCount</span>
+                    </div>
+                </div>
             }
             <div class="form-group col-lg-12">
                 <label class="control-label col-lg-2 col-xs-12"> تصویر</label>
