--- a/Src/Areas/Admin/Views/Partial/General/MainNavigation.cshtml
+++ b/Src/Areas/Admin/Views/Partial/General/MainNavigation.cshtml
@@ -18,9 +18,7 @@
                     <li>
                         <a href="#"><i class="icon-credit-card2"></i> <span>مالی</span></a>
                         <ul>
-                            <li><a href="#">سفارش ها</a></li>
-                            <li><a href="#">پرداخت ها</a></li>
-                            <li><a href="#">تراکنش ها</a></li>
+                            <li><a onclick="pageLoad('/Admin/Order', 'سفارش ها','orderList')" data-target="orderList">سفارش ها</a></li>
                         </ul>
                     </li>
                     <li>
