--- a/Src/Areas/Admin/Views/Product/AddEdit.cshtml
+++ b/Src/Areas/Admin/Views/Product/AddEdit.cshtml
@@ -58,6 +58,7 @@
 <script src="~/Areas/Admin/Scripts/Core/jquery.validate.min.js"></script>
 <script src="~/Areas/Admin/Scripts/Plugin/bootstrap-fileupload.js"></script>
 <script src="~/Areas/Admin/Scripts/Core/jquery.validate.unobtrusive.min.js"></script>
+<script src="~/Areas/Admin/Scripts/Core/makepaging.js"></script>
 <script src="~/Areas/Admin/Scripts/Page/Product/procAddEdit.js"></script>
 <script type="text/javascript">
     $(document).ready(() => {
