--- a/Src/Views/Home/Index.cshtml
+++ b/Src/Views/Home/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
     ViewBag.Title = "فروشگاه لپتاپ آسیا";
-    Layout = "~/Views/Sheared/_Layout.cshtml";
+    Layout = "~/Views/Sheared/_Layout_Primary.cshtml";
 }
 
 @section MetaTags{
