--- a/Src/Content/Css/vendor.css
+++ b/Src/Content/Css/vendor.css
@@ -225,6 +225,12 @@ input[type="radio"], input[type="checkbox"] {
     padding: 0
 }
 
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+    -moz-appearance: none !important;
+    -webkit-appearance: none !important;
+}
+
 input[type="date"], input[type="time"], input[type="datetime-local"], input[type="month"] {
     -webkit-appearance: listbox
 }
