--- a/Src/Views/Partials/General/ToolBar.cshtml
+++ b/Src/Views/Partials/General/ToolBar.cshtml
@@ -35,13 +35,9 @@
         </a>
     </div>
     <div class="toolbar-item hidden-on-mobile">
-        <a href="account-login.html">
+        <a href="/Account">
             <div><i class="icon-user"></i><span class="text-label">ورود / ثبت نام</span></div>
         </a>
-        <div class="toolbar-dropdown text-center px-3">
-            <p class="text-xs mb-3 pt-2"><a class="btn btn-primary btn-sm btn-block" href="account-login.html">ورود</a>
-            <p class="text-xs text-muted mb-2">کاربر جدید هستید؟&nbsp;<a href="account-login.html">ثبت نام</a></p>
-        </div>
     </div>
     <div class="toolbar-item">
         <a href="cart.html">
