--- a/Src/Views/Account/Index.cshtml
+++ b/Src/Views/Account/Index.cshtml
@@ -40,7 +40,7 @@
     <form class="row" method="post">
         <div class="col-sm-12">
             <div class="form-group">
-                <label for="Name">نام و نام خانوادگی</label>
+                <label for="Name">نام</label>
                 <input class="form-control" type="text" id="Name" required>
             </div>
         </div>
