--- a/Src/Views/Partials/Account/Register.cshtml
+++ b/Src/Views/Partials/Account/Register.cshtml
@@ -1,4 +1,4 @@
-﻿@model Src.Models.ViewData.Table.Customer.ViewRegisterVar
+﻿@model Src.Models.ViewData.Table.Customer.ViewAccountVar
 <form class="row" method="post">
     <div class="col-sm-12">
         <div class="form-group">
