--- a/Src/Views/Sheared/_Layout_secondery.cshtml
+++ b/Src/Views/Sheared/_Layout_secondery.cshtml
@@ -41,40 +41,8 @@
     <script src="~/Scripts/Js/vendor.min.js"></script>
     <script src="~/Scripts/Js/scripts.min.js"></script>
     <script type="text/javascript">
-        function notify(type, title, message) {
-            let icon;
-            switch (type) {
-                case "warning":
-                    icon: "icon-alert-triangle";
-                    break;
-                case "danger":
-                    icon: "icon-slash";
-                    break;
-                case "success":
-                    icon: "icon-check-circle";
-                    break;
-                default:
-                    icon = null;
-            };
-            let conf = {
-                class: "iziToast-" + type || "",
-                title: title || "Title",
-                message: message || "toast message",
-                animateInside: !1,
-                position: "topRight",
-                progressBar: !1,
-                icon: icon,
-                timeout: 5000,
-                transitionIn: "fadeInLeft",
-                transitionOut: "fadeOut",
-                transitionInMobile: "fadeIn",
-                transitionOutMobile: "fadeOut"
-            };
-            iziToast.show(conf)
-        }
-
         $(document).ready(() => {
-            let resualt = @Html.Raw(Json.Encode(ViewBag.Resualt));
+            let resualt = @Html.Raw(Json.Encode(ViewBag.Result));
             if (resualt != null) {
                 if (resualt.Message != "Success") {
                     notify('danger', 'خطا!', resualt.Message);
