--- a/Src/Content/Css/styles.css
+++ b/Src/Content/Css/styles.css
@@ -4048,7 +4048,8 @@ a.card {
 .toolbar-dropdown {
     left: -1px;
     right: auto;
-    z-index: 10
+    z-index: 10;
+    border-top: 3px solid #e61923
 }
 
     .toolbar-dropdown.lang-dropdown {
@@ -6315,6 +6316,31 @@ video {
             width: 100%
         }
 
+            .site-header .search-box-wrap .search-box .search-result-box {
+                top: 72px;
+                z-index: 9;
+                width: 100%;
+                display: none;
+                max-width: 360px;
+                background: #fff;
+                border-radius: 5px;
+                padding: 18px 16px;
+                position: absolute;
+                box-shadow: 0 7px 30px -6px rgba(0,0,0,0.15);
+            }
+
+                .site-header .search-box-wrap .search-box .search-result-box .item {
+                    margin-bottom: 24px;
+                }
+
+                    .site-header .search-box-wrap .search-box .search-result-box .item:last-child {
+                        margin-bottom: 0;
+                    }
+
+                    .site-header .search-box-wrap .search-box .search-result-box .item a {
+                        text-decoration: none;
+                    }
+
         .site-header .search-box-wrap .categories-btn {
             -ms-flex-preferred-size: auto;
             flex-basis: auto;
@@ -6743,9 +6769,15 @@ video {
                 content: '\e92f'
             }
 
+
+        .breadcrumbs > li:last-child {
+            color: #505050;
+            font-weight: bold
+        }
+
         .breadcrumbs > li > a {
             transition: color .25s;
-            color: #505050;
+            color: #999;
             text-decoration: none
         }
 
@@ -7007,8 +7039,15 @@ video {
     }
 
         .product-card .product-thumb > img {
+            width: 100%;
+            padding: 15px;
+            margin: 0 auto;
             display: block;
-            width: 100%
+            max-width: 250px;
+            max-height: 250px;
+            object-fit: cover;
+            border-radius: 18px;
+            object-position: center
         }
 
     .product-card .product-category {
